# openapi.json
@@ -1910,10 +1910,19 @@
           "login": {
             "title": "Login",
             "type": "string"
+          },
+          "role": {
+            "enum": [
+              "owner",
+              "user"
+            ],
+            "title": "Role",
+            "type": "string"
           }
         },
         "required": [
           "login",
+          "role",
           "csrf_token"
         ],
         "title": "MeOut",
